Polishing.
Remove unused imports.
Simplify if & switch statements.
Use Set.of, List.of for unmodifiable collections.
Remove redundant usage of semicolon.
Fix broken references in Javadoc.
Fix Typos.
Extend value caching for MongoPersistentProperties.

See: #4555
Original pull request: #4556